[package]
name = "psd-sys"
version = "0.2.1"
edition = "2024"
authors = ["weqeqq <ggmodwear@gmail.com>"]
description = "Rust ffi bindings for the psd-cpp library"
license = "MIT"
repository = "https://github.com/weqeqq/psd-sys"

[dependencies]
libdeflater = "1.24"

[build-dependencies]
cmake = "0.1.54"
